<resources>
    <string name="app_name">Parent App</string>

    <string name="countdown_default">00:00</string>
    <string name="startText">START</string>
    <string name="pauseText">PAUSE</string>
    <string name="resetText">RESET</string>
    <string name="stopAlarm">STOP ALARM</string>

    <string name="choosingText">CHOOSE THE TIMEOUT PERIOD</string>
    <string name="toTimer">GO TO TIMER</string>
    <string name="custom">Set Custom Time</string>
    <string name="customTimeText">CUSTOM TIME</string>
    <string name="hint">Minutes</string>
    <string name="history_of_coin_flips">History of Coin Flips</string>
    <string name="result_history_header">Result</string>
    <string name="name_history_header">Name</string>
    <string name="choice_history_header">Choice</string>
    <string name="time_history_header">Time</string>
    <string name="picture_of_a_coin_to_be_animated">Picture of a Coin to be animated</string>
    <string name="toss">Toss</string>
    <string name="heads">Heads</string>
    <string name="tails">Tails</string>
    <string name="history">History</string>
    <string name="an_icon_representing_the_result_of_coin_toss">An icon representing the result of coin toss</string>
    <string name="coin_toss_menu_title">Coin Toss Menu</string>
    <string name="coin_toss_title">Coin Toss</string>
    <string name="add_kid_title">Add a Kid</string>
    <string name="history_activity_title">History of Tosses</string>
    <string name="kid_menu_title">Kid Configuration</string>
    <string name="kid_menu_activity_title">List of Kids!</string>
    <string name="timeout_timer_title">Timeout Timer</string>

    <string name="help_screen_title">Help Page</string>
    <string name="coin_kid_s_name_tv">Kid\'s Name:</string>
    <string name="coin_kid_s_choice_tv">Kid\'s Choice:</string>

    <string name="kid_image_text">SELECT IMAGE</string>

    <string name="about_title">About App</string>
    <string name="authors_title">Authors</string>
    <string name="copyright_title">Copyrights Information</string>
    <string name="coin_queue_string">Coin\'s Queue</string>
    <string name="help_sources_string">https://www.youtube.com/watch?v=uce70PsO4xA\nhttps://www.youtube.com/watch?v=TsASX0ZK9ak \nhttps://github.com/Cassendra4/ImageCaptureExample \nhttps://www.youtube.com/watch?v=uce70PsO4xA</string>
    <string name="add_new_task_string">Add new Task!</string>

    <string name="time_at_25">Timer at 25%</string>
    <string name="time_at_50">Timer at 50%</string>
    <string name="time_at_75">Timer at 75%</string>
    <string name="time_at_100">Timer at 100%</string>
    <string name="time_at_200">Timer at 200%</string>
    <string name="time_at_300">Timer at 300%</string>
    <string name="time_at_400">Timer at 400%</string>

    <string name="timer_interval">Timer is running at </string>
    <string name="breath_hint_pre_inhale">Hint: Press Begin to start inhaling</string>
    <string name="breath_num_breaths">Let\'s take N Breaths</string>
    <string name="breath_begin">Begin</string>
    <string name="breath_n">N :</string>

</resources>