<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimoutTimer"
    android:background="@drawable/backg">


    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/timer_piechart"
        android:layout_width="207dp"
        android:layout_height="195dp"
        android:layout_above="@+id/countdown_text"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="104dp"
        android:layout_marginEnd="101dp"
        android:layout_marginBottom="48dp" />

    <TextView
        android:id="@+id/countdown_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/countdown_default"
        android:textColor="#FFF6D205"
        android:textSize="60sp" />

    <Button
        android:id="@+id/start_pause_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/countdown_text"
        android:layout_centerHorizontal="true"
        android:text="@string/startText" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/start_pause_button"
        android:layout_centerHorizontal="true"
        android:text="@string/resetText"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <Button
        android:id="@+id/stopAlarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reset_button"
        android:layout_centerHorizontal="true"
        android:text="@string/stopAlarm"
        android:visibility="invisible"
        tools:visibility="visible"/>

    <TextView
        android:id="@+id/timerInterval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="44dp"
        android:text="TextView"
        android:textColor="#FFF"
        android:visibility="invisible"
        tools:visibility="visible"/>
</RelativeLayout>