<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".HistoryActivity"
    android:background="@drawable/backg">

    <ListView
        android:id="@+id/history_list"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="120dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/history_title_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="#ED28015D"
        android:fontFamily="cursive"
        android:padding="5dp"
        android:text="@string/history_of_coin_flips"
        android:textAlignment="center"
        android:textColor="#F6D205"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/history_header_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/result_history_header"
        android:textAlignment="center"
        android:textColor="#FFF6D205"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/history_list"
        app:layout_constraintTop_toBottomOf="@+id/history_title_tv" />

    <TextView
        android:id="@+id/history_header_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:text="@string/name_history_header"
        android:textAlignment="center"
        android:textColor="#FFF6D205"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/history_header_result"
        app:layout_constraintTop_toBottomOf="@+id/history_title_tv" />

    <TextView
        android:id="@+id/history_header_choice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="12dp"
        android:text="@string/choice_history_header"
        android:textAlignment="center"
        android:textColor="#FFF6D205"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/history_header_name"
        app:layout_constraintTop_toBottomOf="@+id/history_title_tv" />

    <TextView
        android:id="@+id/history_header_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:text="@string/time_history_header"
        android:textAlignment="center"
        android:textColor="#FFF6D205"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/history_header_choice"
        app:layout_constraintTop_toBottomOf="@+id/history_title_tv" />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/history_header_name" />
</androidx.constraintlayout.widget.ConstraintLayout>