<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpScreen"
    android:background="@drawable/backg">

    <TextView
        android:id="@+id/aboutAppTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/about_title"
        android:textStyle="normal|bold"
        android:textColor="#FFF6D205"
        android:background="#ED28015D"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/aboutAppText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#ED28015D"
        android:text="Project Parent App created by Team Argon!"
        android:textColor="#F6D205"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppTitle" />

    <TextView
        android:id="@+id/authorsTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/authors_title"
        android:textStyle="normal|bold"
        android:textColor="#FFF6D205"
        android:background="#ED28015D"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutAppText" />

    <TextView
        android:id="@+id/authorsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#ED28015D"
        android:text="Created by Arjun Singh, Mikhael Opeyemi-Olatunji, and Parham Khadem!"
        android:textColor="#F6D205"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorsTitle" />

    <TextView
        android:id="@+id/copyrightTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:textAlignment="center"
        android:textSize="25sp"
        android:text="@string/copyright_title"
        android:textStyle="normal|bold"
        android:textColor="#FFF6D205"
        android:background="#ED28015D"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorsText" />

    <TextView
        android:id="@+id/copyrightText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#ED28015D"
        android:text="@string/help_sources_string"
        android:textColor="#F6D205"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/copyrightTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>